mobile design fix

--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -154,6 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .main-header .logo {
   margin-top: 5px;
+  width:210px;
 }
 .main-header .logo h1 {
   font-size: 28px;
