--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -111,6 +111,12 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 30px;
 }
 
+.clsred{
+	color:red;
+}
+.clsgreen{
+	color:green;
+}
 /*------------------------------------------------------
 	Header Styles 
 --------------------------------------------------------*/
